--- a/hackaton2/src/main/resources/application.properties
+++ b/hackaton2/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=hackaton2
+
+# --- Configuración de correo ---
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=leo.torres@utec.edu.pe
+spring.mail.password=dghy tqqo jdcb idmr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# --- Configuración de JWT ---
+jwt.secret=SuperClaveUltraSecretaDeAlMenos32Caracteres_2025
+
+# --- Configuración de JPA y Base de Datos ---
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:mem:testdb
